@@ -102,6 +102,9 @@ James TD Smith <ahktenzero@dsl.pipex.com>
 Charles Twardy <ctwardy@iet.com>
         fixed cia
 
+Uspenskiy Andrey <duspen@yandex.ua>
+        elvi: yandex
+
 THANKS TO
 
 Brian Nelson           <bnelson@bloodclot.net>
