@@ -21,7 +21,8 @@ EXTRA_DIST = runtests elviwithouttests README COOKIES W.test		\
 	springer.test stockquote.test sunonesearch.test thesaurus.test	\
 	translate.test urban.test w3css.test w3html.test w3link.test	\
 	w3rdf.test wayback.test webster.test wetandwild.test		\
-	wikipedia.test woffle.test yahoo.test youtube.test yubnub.test
+	wikipedia.test woffle.test yahoo.test yandex.test youtube.test	\
+	yubnub.test
 
 test:
 	./runtests
