@@ -1,0 +1,2 @@
+yandex putin
+ru.wikipedia.org
